Fixed issue with home container and navbar. Should be adjusted properly  on mobile and tablet devices. Fixing it on desktop now.

--- a/frontend/src/css/layout.css
+++ b/frontend/src/css/layout.css
@@ -7,8 +7,8 @@
   background-color: var(--lighter-white);
 }
 .home {
-  width: 100%;
-  min-height: 100%;
+  width: 100vw;
+  min-height: 100vh;
 }
 
 @media (min-width: 567.98px) {
@@ -16,14 +16,15 @@
 @media (min-width: 767.98px) {
   .home {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
   }
 }
 @media (min-width: 991.98px) {
-  .container {
-    /* display: grid;
-    grid-template-columns: 0.5fr 2fr; */
-  }
+  /* .container {
+    display: grid;
+    grid-template-columns: 0.5fr 2fr;
+  } */
 }
 @media (min-width: 1199.98px) {
 }
