--- a/frontend/src/css/navigation.css
+++ b/frontend/src/css/navigation.css
@@ -97,6 +97,7 @@
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 1rem;
     margin: 2rem 0;
+    position: static;
   }
 
   .categoryArea {
